tests/negative/const_assignment.c
int main(void) { const int x = 1; x = 2; return x; }
